[tool.poetry]
name = "best-fitting-line"
version = "0.1.0"
description = ""
authors = ["Parsaloi Nakuoh <parsaloi35@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.1"

[tool.poetry.scripts]
best-fitting-line = "best_fitting_line:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
